--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnOpenGLESWithCPP">
         <activity
-            android:name=".OpenGLCPPActivity"
+            android:name=".activity.OpenGLCPPActivity"
+            android:exported="true">
+
+
+        </activity>
+        <activity
+            android:name=".activity.MainActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".activity.ShaderFilterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
