add code draw text, primite

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnOpenGLESWithCPP">
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.DisplayMyViewActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".activity.AirHockeyActivity"
             android:exported="true">
@@ -25,15 +34,10 @@
         <activity
             android:name=".activity.OpenGLCPPActivity"
             android:exported="true" />
-
         <activity
             android:name="com.bip.mediax.VideoSnapActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.MainActivity"
@@ -41,7 +45,6 @@
         <activity
             android:name=".activity.ShaderFilterActivity"
             android:exported="true" />
-
         <activity
             android:name="com.learn.proandroidkotlin.activity.MyGLActivity"
             android:exported="true">
