--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
 
 
     implementation 'com.google.android.material:material:1.5.0'
+
+    implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 }
