--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,24 +17,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnOpenGLESWithCPP">
         <activity
-            android:name="com.learn.proandroidkotlin.activity.PathEffectActivity"
+            android:name="com.learn.proandroidkotlin.activity.DrawImagewPolytopolyActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.PathEffectActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name="com.learn.proandroidkotlin.activity.MainAnimationActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="com.learn.proandroidkotlin.activity.DisplayMyViewActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activity.AirHockeyActivity"
             android:exported="true" />
