--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,51 +17,49 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnOpenGLESWithCPP">
         <activity
-            android:name="com.learn.proandroidkotlin.activity.DrawImagewPolytopolyActivity"
-            android:exported="true">
-
-
-        </activity>
-        <activity
-            android:name="com.learn.proandroidkotlin.activity.PathEffectActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name="com.learn.proandroidkotlin.activity.MainAnimationActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name="com.learn.proandroidkotlin.activity.DisplayMyViewActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".activity.AirHockeyActivity"
-            android:exported="true" />
-        <activity
-            android:name=".activity.OpenGLCPPActivity"
-            android:exported="true" />
-        <activity
-            android:name="com.bip.mediax.VideoSnapActivity"
-            android:exported="true" />
-        <activity
-            android:name=".activity.MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".activity.ShaderFilterActivity"
-            android:exported="true" />
-        <activity
-            android:name="com.learn.proandroidkotlin.activity.MyGLActivity"
-            android:exported="true">
-
-        </activity>
-
-        <activity
-            android:name="com.learn.proandroidkotlin.activity.Cube3D"
+            android:name="com.learn.proandroidkotlin.activity.DrawTextDemoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.DrawImagewPolytopolyActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.PathEffectActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.MainAnimationActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.DisplayMyViewActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.bip.learnopengleswithcpp.activity.AirHockeyActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.bip.learnopengleswithcpp.activity.OpenGLCPPActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.bip.mediax.VideoSnapActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.bip.learnopengleswithcpp.activity.MainActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.bip.learnopengleswithcpp.activity.ShaderFilterActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.MyGLActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name="com.learn.proandroidkotlin.activity.Cube3D"
+            android:exported="true">
+
         </activity>
     </application>
 
