--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,14 @@
         <activity
             android:name="com.learn.proandroidkotlin.activity.DrawTextDemoActivity"
             android:exported="true"
-            tools:ignore="Instantiatable">
-
-        </activity>
-
+            tools:ignore="Instantiatable"></activity>
         <activity
             android:name="com.learn.proandroidkotlin.activity.DrawImagewPolytopolyActivity"
             android:exported="true"
-            tools:ignore="Instantiatable"></activity>
+            tools:ignore="Instantiatable" />
         <activity
             android:name="com.learn.proandroidkotlin.activity.PathEffectActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="com.learn.proandroidkotlin.activity.MainAnimationActivity"
             android:exported="true" />
@@ -42,10 +39,7 @@
             android:exported="true" />
         <activity
             android:name="com.bip.learnopengleswithcpp.activity.OpenGLCPPActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="com.bip.mediax.VideoSnapActivity"
             android:exported="true"
@@ -55,10 +49,7 @@
             android:exported="true" />
         <activity
             android:name="com.bip.learnopengleswithcpp.activity.ShaderFilterActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="com.learn.proandroidkotlin.activity.MyGLActivity"
             android:exported="true"
@@ -71,9 +62,7 @@
         </activity>
         <activity
             android:name="com.learn.proandroidkotlin.activity.Cube3D"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
